tests/netedit/demandelements/waypoint/basic/invalid_type/routes.netedit
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-03-07 09:14:54 by Eclipse SUMO netedit Version v1_12_0+1177-f6b46b7e4a3
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <!-- Routes -->
    <route id="route_0" edges="gneE0 gneE1" color="yellow">
        <stop lane="gneE0_0" startPos="7.00" endPos="17.00" duration="60.00" speed="13.89"/>
    </route>
</routes>
